# e2s

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  USAGES.md  dist-workspace.toml
src/: app.rs  main.rs  tui.rs  ui.rs  update.rs
src/app/aws/: ec2.rs  mod.rs
src/app/input/: mod.rs  ssh_keys.rs  ssh_user.rs  user_input.rs
src/ui/ui_block/: footer.rs  header.rs  help.rs  instances_table.rs  mod.rs  search.rs  welcome.rs
wix/: main.wxs
